// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateJoinTableDDL > generates join table DDL for TestCourse (owning side with hasJoinTable) 1`] = `
{
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_z58Ij1Xi9Mi" ON "test_course_x_test_student" ("testStudentId");",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "test_course_x_test_student" (
  "testCourseId" UUID NOT NULL REFERENCES "TestCourse" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  "testStudentId" UUID NOT NULL REFERENCES "TestStudent" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  PRIMARY KEY ("testCourseId", "testStudentId")
);",
  ],
}
`;

exports[`generateJoinTableDDL > generates join table DDL for TestStudent (both M2M sides produce a table) 1`] = `
{
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_bFXUMk_r25z" ON "test_course_x_test_student" ("testCourseId");",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "test_course_x_test_student" (
  "testStudentId" UUID NOT NULL REFERENCES "TestStudent" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  "testCourseId" UUID NOT NULL REFERENCES "TestCourse" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  PRIMARY KEY ("testStudentId", "testCourseId")
);",
  ],
}
`;

exports[`generateJoinTableDDL > generates join table with custom joinTable name 1`] = `
{
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_sjDVai2EErr" ON "post_tags" ("joinTagId");",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "post_tags" (
  "joinPostId" UUID NOT NULL REFERENCES "JoinPost" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  "joinTagId" UUID NOT NULL REFERENCES "JoinTag" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  PRIMARY KEY ("joinPostId", "joinTagId")
);",
  ],
}
`;

exports[`generateJoinTableDDL > uses schema-qualified join table name when namespace is provided 1`] = `
{
  "indexes": [
    "CREATE INDEX IF NOT EXISTS "idx_z58Ij1Xi9Mi" ON "social"."test_course_x_test_student" ("testStudentId");",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS "social"."test_course_x_test_student" (
  "testCourseId" UUID NOT NULL REFERENCES "social"."TestCourse" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  "testStudentId" UUID NOT NULL REFERENCES "social"."TestStudent" ("id") ON DELETE CASCADE ON UPDATE CASCADE,
  PRIMARY KEY ("testCourseId", "testStudentId")
);",
  ],
}
`;
